<resources>
    <string name="app_name">e-Ajutor</string>
    <string name="title_profile">Profil</string>
    <string name="add_requests">Cerere noua</string>
    <string name="see_requests">Cererile mele</string>
    <string name="requests">Cereri</string>
    <string name="registration_successful">Inregistrarea a fost efectuată cu succes!</string>
    <string name="verification_email_sent">Email-ul de verificare a fost trimis.</string>
    <string name="failed_to_send_verification_email">Email-ul de verificare nu a fost trimis.</string>
    <string name="no_internet_connection">Fara conexiune la internet.</string>
    <string name="registration_failed_user_details">Inregistrarea a reutit, dar nu s-a putut obtine detaliile utilizatorului.</string>
    <string name="failed_to_save_user_details">Failed to save user details: %1$s</string>
    <string name="failed_to_save_user_details_try_again">Nu s-au salvat detaliile utilizatorului. Vă rog să incercati
sa va inregistrati din nou.</string>
    <string name="authentication_failed_generic">Autentificarea a esuat: %1$s</string>
    <string name="error_first_name_required">Prenumele este necesar</string>
    <string name="error_last_name_required">Numele este necesar</string>
    <string name="error_phone_required">Numarul de telefon este necesar</string>
    <string name="error_phone_starts_with_0">Numarul de telefon incepe cu 0</string>
    <string name="error_phone_10_digits">Numarul de telefon are 10 cifre</string>
    <string name="error_phone_only_digits">Numarul de telefon contine doar cifre</string>
    <string name="error_email_required">Adresa de email este necesara</string>
    <string name="error_invalid_email">Introduceti o adresa valida de email</string>
    <string name="error_password_required">Parola este necesara</string>
    <string name="error_password_min_length">Parola trebuie sa contina 6 cifre</string>
    <string name="error_password_uppercase">Parola trebuie sa contina cel putin un caracter cu majuscule\n</string>
    <string name="error_password_digit">Parola trebuie sa contina cel putin o cifra</string>
    <string name="error_password_special_char">Parola trebuie sa contina cel putin un caracter special(!,?…)</string>
    <string name="error_email_exists">Adresa de email este deja folosita</string>
    <string name="error_password_weak">Parola este prea slaba %1$s</string>
    <string name="biometric_login_title">Conectare biometrică</string>
    <string name="biometric_login_subtitle">Conectați-vă folosind credențialele biometrice</string>
    <string name="email_required">Adresa de e -mail este necesară</string>
    <string name="invalid_email_address">Introduceți o adresă de e-mail validă</string>
    <string name="password_required">Parola este necesară</string>
    <string name="email_not_verified_title">E-mail nu a fost verificat</string>
    <string name="email_not_verified_message">Adresa dvs. de e-mail nu a fost verificată. Vă rugăm să verificați căsuța de e-mail pentru linkul de verificare. Dacă nu îl vedeți, puteți retrimite e-mailul.</string>
    <string name="resend_email_button">Retrimite E-mail</string>
    <string name="verification_email_sent_success">E-mail de verificare trimis. Vă rugăm să verificați căsuța de e-mail (și folderul spam).</string>
    <string name="verification_email_send_fail">Nu a reușit să se trimită e-mailul de verificare</string>
    <string name="reset_password_title">Resetați parola</string>
    <string name="reset_button_text">Resetează</string>
    <string name="password_reset_email_sent_success">Instrucțiunile de resetare a parolei au fost trimise la e-mail.</string>
    <string name="password_reset_email_send_fail">Nu am putut trimite o cerere de resetare a parolei.</string>
    <string name="register">Inregistrare</string>
    <string name="cd_toggle_password_visibility">Vezi parola</string>
    <string name="password_too_short">Parola este prea scurta</string>
    <string name="password_requires_uppercase">Parola necesita o litera mare\n</string>
    <string name="password_requires_digit">Parola necesita o cifra\n</string>
    <string name="password_requires_special">Parola necesita un caracter special(!?..)\n</string>
    <string name="first_name_required">Nume obligatoriu!\n</string>
    <string name="last_name_required">Prenume obligatoriu!\n\n</string>
    <string name="phone_number_required">Numar de telefon obligatoriu!\n</string>
    <string name="registration_error_try_again">Eroare de inregistrare. Va rog incercati din nou.\n</string>
    <string name="registration_successful_verify_email">Înregistrare reușită! Vă rugăm să vă verificați e-mailul pentru a verifica și apoi să vă conectați.</string>
    <string name="registration_succeeded_details_failed">Înregistrarea a reușit, dar unele detalii nu au putut fi salvate. Vă rugăm să verificați e-mailul și să vă conectați.</string>
    <string name="email_verification_required_title">Adresa de email trebuie verificata!</string>
    <string name="email_verification_message_part1">Adresa de email (%1$s) nu este verificata.</string>
    <string name="email_verification_message_part2">Vă rugăm să verificați căsuța de email-uri.\n</string>
    <string name="verification_email_sent_toast">A fost trimis un email pentru verificare.\n</string>
    <string name="failed_to_send_verification_email_toast">Email-ul de verificare nu a putut fi trimis.</string>
    <string name="please_verify_to_continue_toast">Va rugam verificati adresa de email pentru a continua.\n</string>
    <string name="later_button">Mai tarziu.\n</string>
    <string name="password_reset_email_sent_message">Instrucțiunile de resetare a parolei au fost trimise la e -mail.</string>
    <string name="password_reset_failed_message">Nu a reușit să trimită e -mail de resetare a parolei: %1$s</string>
    <string name="auth_failed_default">Autentificarea a eșuat.</string>
    <string name="auth_failed_no_user">Nu a fost găsit niciun cont cu acest e-mail.</string>
    <string name="auth_failed_incorrect_password">Parolă incorectă.</string>
    <string name="auth_failed_exception">Autentificarea a eșuat: %1$s</string>
    <string name="auth_failed_suggestion">Aveți probleme? Încercați să utilizați opțiunea "Ai uitat parola?".</string>
    <string name="mfa_dialog_title">Introduceți codul MFA.</string>
    <string name="ok_button">OK</string>
    <string name="session_requires_recent_login">Sesiunea necesită o autentificare recentă. Vă rugăm să vă re-autentificați.</string>
    <string name="error_preparing_for_mfa_setup">Eroare la pregătirea pentru configurarea MFA: %1$s</string>
    <string name="verification_failed">Verificarea a eșuat: %1$s</string>
    <string name="sms_mfa_successfully">SMS MFA activat cu succes!</string>
    <string name="mfa_enrollment_failed">Înrolarea MFA a eșuat: %1$s</string>
    <string name="please_upload_all_required_documents_for">Vă rugăm să încărcați toate documentele necesare pentru %1$s.</string>
    <string name="select_a_benefit_type_to_see_requirements">Selectați un tip de beneficii pentru a vedea cerințele.</string>
    <string name="select_a_benefit_to_see_requirements">Selectați un tip de îndemnizație pentru a putea vedea infomarțiile necesare</string>
    <string name="uploaded_of_documents">Ați %1$d din %2$d documente.</string>
    <string name="all_required_documents_uploaded">Toate documentele necesare sunt încărcate.</string>
    <string name="no_documents_required_for_this_benefit_type">Nu sunt necesare documente pentru acest tip de beneficii.</string>
    <string name="select_a_benefit_type">Selectați un tip de beneficii.</string>
    <string name="home">Acasă: %1$s, %2$s</string>
    <string name="current_service_location_lat_lng">Locația curentă a serviciului: Lat %1$f, Lng %2$f</string>
    <string name="current_service_location_not_set">Locația serviciului curent: nu este setat</string>
    <string name="current_service_location_not_set_profile_missing">Locația curentă a serviciului: nu se setează (profilul lipsă)</string>
    <string name="current_service_location_error_loading">Locația curentă a serviciului: încărcarea erorilor</string>
    <string name="current_home_residential_address_lat_lng">Adresa rezidențială actuală: Lat %1$f, Lng %2$f</string>
    <string name="current_home_residential_address_not_set">Adresa rezidențială actuală: nu este setată</string>
    <string name="current_home_residential_address_not_set_profile_missing">Adresa rezidențială actuală: Nu este setat (profilul lipsă)</string>
    <string name="current_home_residential_address_error_loading">Adresa rezidențială actuală: Încărcarea erorilor</string>
    <string name="service">Locul serviciului: %1$s, %2$s</string>
    <string name="current_service_location_lat_lng_op">Locația curentă a serviciului: Lat %1$s, Lng %2$s</string>
    <string name="current_home_location_lat_lng_hom">Adresa rezidențială actuală: Lat %1$s, Lng %2$s</string>
    <string name="current_service_location">Locația curentă a serviciului: %1$s</string>
    <string name="current_service_location_lat_lng_address_not_found">Locația curentă a serviciului: Lat %1$s, Lng %2$s (Address not found)</string>
    <string name="current_service_location_lat_lng_error_finding_address">Locația curentă a serviciului: Lat %1$s, Lng %2$s (Error finding address)</string>
    <string name="error_request_data_is_unavailable">Eroare: Datele de solicitare nu sunt disponibile.</string>
    <string name="submitted">Solicitarea a fost trimisă: %1$s</string>
    <string name="utilizator">Utilizator: %1$s</string>
    <string name="iban">IBAN: %1$s</string>
    <string name="no_documents_available_for_this_request">Nu există documente disponibile pentru această solicitare.</string>
    <string name="mfa_status_not_checked">Stare MFA: Nu este verificat</string>
    <string name="enrolled_factors">"Factori înscriși: "</string>
    <string name="send_verification_code">Trimite cod de verificare</string>
    <string name="verify_and_enable_mfa">Verificați și activați MFA</string>
    <string name="enter_the_code_sent_to_your_phone">Introduceți codul trimis pe telefonul dvs.</string>
    <string name="sms_code">Cod SMS</string>
    <string name="verify_and_sign_in">Verificați și Conectați-vă</string>
    <string name="resend_code">Retrimitere Cod</string>
    <string name="view">Vizualizează</string>
    <string name="select_benefit_type">Selectați tipul de indemnizatie:</string>
    <string name="benefit_description_will_appear_here">Descrierea beneficiului va apărea aici.</string>
    <string name="required_documents">Documente necesare:</string>
    <string name="introduceti_adresa_de_email_asociata">Introduceti adresa de email asociata cu contul tau pentru a primi instructiuni pentru a va putea reseta parola.</string>
    <string name="adresa_de_e_mail">Adresa de e-mail</string>
    <string name="noul_nume">Noul Nume</string>
    <string name="noul_prenume">Noul Prenume</string>
    <string name="upload_document">Încărcați documentul</string>
    <string name="no_file_uploaded">Nu există niciun fișier încărcat.</string>
    <string name="iban_lay">IBAN:</string>
    <string name="enter_your_iban">Introduceți IBAN-ul dvs.</string>
    <string name="additional_information">Informații suplimentare:</string>
    <string name="optional_notes">Note opționale …</string>
    <string name="GDPR">Sunt de acord cu procesarea datelor mele personale (GDPR).</string>
    <string name="submit_request">Trimiteți cererea</string>
    <string name="gdpr_checkbox_text">Sunt de acord cu procesarea datelor mele personale (GDPR).</string>
    <string name="gdpr_info_url">https_gdpr-info.eu/</string>
    <string name="submit_a_new_request">Cerere nouă</string>
    <string name="rejection_reason">Motiv de respingere:</string>
    <string name="uploaded_documents">Documente încărcate</string>
    <string name="download">Descărcare</string>
</resources>