<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.licenta.e_ajutor.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_add_request"
        android:name="com.licenta.e_ajutor.ui.addRequests.InformationAddRequestFragment"
        android:label="Informații Adăugare Cerere"
        tools:layout="@layout/fragment_information_request">
        <action
            android:id="@+id/action_information_to_add_request_form"
            app:destination="@id/addRequestFormFragment" />
    </fragment>

    <fragment
        android:id="@+id/addRequestFormFragment"
        android:name="com.licenta.e_ajutor.ui.addRequests.AddRequestFragment"
        android:label="@string/add_requests"
        tools:layout="@layout/fragment_add_request" />

    <fragment
        android:id="@+id/navigation_see_requests"
        android:name="com.licenta.e_ajutor.ui.viewRequests.ViewRequestsFragment"
        android:label="@string/see_requests"
        tools:layout="@layout/fragment_view_requests" />
</navigation>